--- a/question56087719/pom.xml
+++ b/question56087719/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
-            <version>${jackson.version}</version>
+            <version>2.9.8</version>
         </dependency>
     </dependencies>
     <properties>
