--- a/question56004821/pom.xml
+++ b/question56004821/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.stackoverflow</groupId>
-    <artifactId>question.56004821</artifactId>
+    <groupId>com.stackoverflow.questions</groupId>
+    <artifactId>56004821</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
